# scrape-ai

./: .gitignore  README.md  example.env  pyproject.toml
src/: db.py  use_cases.py  utils.py
src/api/: __main__.py  server.py
src/api/base/: error.py
src/api/v1/: __init__.py
src/api/v1/download_page/: error.py  schema.py  view.py
src/api/v1/health/: view.py
