[project]
name = "scrape-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.13",
    "openai==1.90.0",
    "parsel==1.10.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.0",
    "random-user-agent==1.0.1",
    "requests==2.32.4",
    "sqlalchemy==2.0.41",
    "uvicorn==0.34.3",
]

[dependency-groups]
dev = ["ruff==0.12.0"]


[tool.basedpyright]
typeCheckingMode = "all"
allowedUntypedLibraries = ["random_user_agent"]
